fix: shift 키를 누르면 이미지 이동 시 가로폭 고정 기능 추가, 이미지 이동 시 그리드 가이드 추가

--- a/css/common.css
+++ b/css/common.css
@@ -471,6 +471,33 @@ i.result-temp-bg {
   margin: auto;
   transition: transform 0.2s ease;
 }
+.selected-image .grid {
+  display: none;
+}
+.selected-image i {
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  top: 166px;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.3);
+  z-index: 2;
+}
+.selected-image i:nth-child(2) {
+  top: 333px;
+}
+.selected-image i:nth-child(3) {
+  width: 1px;
+  height: 100%;
+  top: 0;
+  left: 166px;
+}
+.selected-image i:nth-child(4) {
+  width: 1px;
+  height: 100%;
+  top: 0;
+  left: 333px;
+}
 .selected-image-position {
   position: absolute;
   width: 100%;
